--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'pokefont';
+  src: url(./assets/PokemonGb-RAeo.ttf) format('truetype');
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
