--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   width: 100vw;
   height: 100vh;
   background-image: url("./assets/bg.jpg");
+  background-size: cover;
+
   display: flex;
   align-items: center;
   justify-content: center;
