feat: expand generations on hover

--- a/src/components/GenerationSelector.css
+++ b/src/components/GenerationSelector.css
@@ -4,10 +4,16 @@
   background-color: rgba(0, 0, 0, 0.05);
   padding: 1rem;
   border-radius: 1rem;
+  max-height: 1rem;
+  transition: 1s;
+}
+
+.container:hover {
+  max-height: 100rem;
 }
 
 .dot {
-  width: 0.5rem;
+  width: 0.7rem;
   aspect-ratio: 1;
   border-radius: 50%;
   display: inline-block;
@@ -16,13 +22,21 @@
 }
 
 .generation {
-  font-size: 0.8rem;
   padding: 0.1rem 0.2rem;
   cursor: pointer;
   user-select: none;
   word-spacing: -0.5rem;
   letter-spacing: -0.1rem;
   border-radius: 1rem;
+  transition: 1s;
+}
+
+.generation:not(:first-child) {
+  opacity: 0;
+}
+
+.container:hover > * {
+  opacity: 1;
 }
 
 .generation:hover {
