--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
   background-image: url("./assets/bg.jpg");
   background-size: cover;
   font-family: "pokefont";
