--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,7 +1,7 @@
 .app {
   min-width: 100vw;
   min-height: 100vh;
-  background-image: url("./assets/bg.jpg");
+  background-image: url("../assets/bg.jpg");
   background-size: cover;
   font-family: "pokefont";
 
