feat: styles login screen

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   src: url(./assets/PokemonGb-RAeo.ttf) format("truetype");
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
