--- a/src/pages/Casual.css
+++ b/src/pages/Casual.css
@@ -32,28 +32,28 @@
   justify-content: space-between;
   align-items: end;
   padding: 0 2rem 0.5rem 2rem;
-}
 
-.bottom img {
-  width: 2rem;
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 0.4rem;
-  border-radius: 50%;
-}
+  img {
+    width: 2rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 0.4rem;
+    border-radius: 50%;
+  }
 
-.bottom .right {
-  background-color: rgba(0, 0, 0, 0.4);
-  border-radius: 1rem;
-  padding: 1rem;
-}
+  .right {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 1rem;
+    padding: 1rem;
 
-.homelink {
-  font-family: pokefont;
-  color: rgb(226, 255, 255);
-  padding: 0.4rem;
-}
+    .homelink {
+      font-family: pokefont;
+      color: rgb(226, 255, 255);
+      padding: 0.4rem;
 
-.homelink:hover {
-  cursor: pointer;
-  color: rgb(154, 230, 237);;
+      &:hover {
+        cursor: pointer;
+        color: rgb(154, 230, 237);
+      }
+    }
+  }
 }
