--- a/src/components/Guesser.css
+++ b/src/components/Guesser.css
@@ -1,11 +1,8 @@
 .guesser {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 5fr 1fr;
-  grid-template-areas:
-    "types poke-info"
-    "types buttons";
-  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 60%;
   padding: 4rem;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 5rem;
@@ -14,8 +11,8 @@
 .types {
   grid-area: types;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem 0rem;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem 2rem;
 }
 
 .type {
@@ -47,21 +44,23 @@
 }
 
 .sprite {
-  width: 15rem;
+  scale: 2;
+  margin-bottom: 6rem;
 }
 
 .buttons {
-  grid-area: buttons;
   display: flex;
-  align-items: end;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.guess-button {
+button {
+  width: 10rem;
   border: none;
   padding: 1rem;
+  margin: 2rem;
   font-family: pokefont;
-  font-size: 2rem;
+  font-size: 1rem;
   background-color: rgba(78, 149, 215);
   color: white;
   border-radius: 1rem;
@@ -70,7 +69,7 @@
   transition: transform 0.1s, box-shadow 0.1s;
 }
 
-.guess-button:hover {
+button:hover {
   transform: translateY(-0.2rem);
   cursor: pointer;
 }
