--- a/src/pages/Casual.css
+++ b/src/pages/Casual.css
@@ -23,6 +23,7 @@
   margin: 0 auto;
   text-align: center;
   font-size: 1.2rem;
+  transform: translateX(5rem);
 }
 
 .middle {
@@ -32,11 +33,12 @@
   padding: 1rem;
 }
 
+
 .bottom {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 0 2rem 1rem 2rem;
+  align-items: end;
+  padding: 0 2rem 0.5rem 2rem;
 
   img {
     width: 2rem;
@@ -46,7 +48,7 @@
   }
 
   .right {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 1rem;
     padding: 1rem;
 
@@ -64,19 +66,17 @@
 }
 
 .score {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
-  padding: 0.5rem;
+  margin-right: 2rem;
+  padding: 1rem;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 0.5rem;
   color: white;
   font-size: 1rem;
-  z-index: 10;
+  text-align: center;
 }
 
 .score-row {
